<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 標題-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/main_title_size"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/main_title_paddingleft"
        android:paddingTop="@dimen/main_title_paddingtop_and_bottom"
        android:paddingBottom="@dimen/main_title_paddingtop_and_bottom"
        android:background="@drawable/bg_gradient"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_marginTop="@dimen/profile_margin_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/profile_margin_left_and_right"
        android:layout_marginRight="@dimen/profile_margin_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/profile_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/profile_name_hint"
            android:ems="10"
            android:id="@+id/profile_name" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/profile_margin_left_and_right"
        android:layout_marginRight="@dimen/profile_margin_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/profile_phone" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="@string/profile_phone_hint"
            android:ems="10"
            android:id="@+id/profile_phone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/profile_margin_left_and_right"
        android:layout_marginRight="@dimen/profile_margin_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/profile_email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/profile_email_hint"
            android:ems="10"
            android:id="@+id/profile_email" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_margin_left_and_right"
        android:layout_marginRight="@dimen/profile_margin_left_and_right"
        android:text="@string/profile_submit"
        android:id="@+id/submit"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>