<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 標題-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/main_title_size"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/main_title_paddingleft"
        android:paddingTop="@dimen/main_title_paddingtop_and_bottom"
        android:paddingBottom="@dimen/main_title_paddingtop_and_bottom"
        android:background="@drawable/bg_gradient"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout"
        android:layout_marginLeft="@dimen/userorder_edittext_margin_left_and_right"
        android:layout_marginRight="@dimen/userorder_edittext_margin_left_and_right">

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/userorder_totalprice_margin_bottom"
            android:id="@+id/userorder_totalprice_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userorder_totalprice"
            android:textSize="@dimen/userorder_totalprice"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userorder_name"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/userorder_name_hint"
                android:ems="10"
                android:id="@+id/userorder_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userorder_telphone"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/userorder_telphone_hint"
                android:id="@+id/userorder_telphone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userorder_email"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/userorder_email_hint"
                android:id="@+id/userorder_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userorder_place"
                android:textSize="20sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userorder_place" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userorder_transactionhour"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/userorder_transactionhour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userorder_transactionhour_button"/>
        </LinearLayout>

        <TextView
            android:id="@+id/userorder_transactionhour_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userorder_transactionhour_text"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userorder_submit_button" />

    </LinearLayout>

</RelativeLayout>