<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="#e6e6e6"
        android:id="@+id/relativeLayout3">



        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/orderview_oid"-->
        <!--android:textSize="@dimen/orderview_detail_title_textsize"-->
        <!--android:id="@+id/oid"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:textColor="#4b4b4b"-->
        <!--android:layout_marginTop="4dp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_rname"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/rname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#4b4b4b"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_rphone"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/rphone"
            android:layout_below="@+id/rname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#4b4b4b"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_remail"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/remail"
            android:layout_below="@+id/rphone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#4b4b4b"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_tplace"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/tplace"
            android:layout_below="@+id/remail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#4b4b4b"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_ttime"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/ttime"
            android:layout_below="@+id/tplace"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#4b4b4b"
            android:layout_marginTop="4dp" />

    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listview"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/relativeLayout4" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a86ff"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/relativeLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_tupdate2"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/tupdate"
            android:layout_below="@+id/oprice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#fcfcfc"
            android:layout_marginTop="4dp"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderview_oprice2"
            android:textSize="@dimen/orderview_detail_normal_textsize"
            android:id="@+id/oprice"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:textColor="#fcfcfc"
            android:layout_marginTop="4dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

</RelativeLayout>