<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 標題-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/main_title_size"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/main_title_paddingleft"
        android:paddingTop="@dimen/main_title_paddingtop_and_bottom"
        android:paddingBottom="@dimen/main_title_paddingtop_and_bottom"
        android:background="@drawable/bg_gradient"
        android:id="@+id/textView2" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_above="@id/relativeLayout"
        android:layout_below="@+id/textView2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/totalpriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_listview_textsize"
            android:text="@string/cart_totalprice"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_submit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/button" />

    </RelativeLayout>

</RelativeLayout>