<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/relativeLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:id="@+id/relativeLayout"
        android:padding="10dp">



        <TextView
            android:id="@+id/totalpriceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_listview_textsize"
            android:text="@string/cart_totalprice"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_checkout"
            android:id="@+id/button"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape"
            android:textColor="#e1e1e1"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            android:layout_weight="2" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/noItemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_noitemtext"
            android:textColor="#000000"
            android:textSize="@dimen/cart_noitemtext_size"
            />

    </RelativeLayout>


</RelativeLayout>